[package]
name = "arcgis-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["Skyler Favors <skylerafavors@gmail.com>"]
description = "Rust client library for the ArcGIS REST API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skyler-favors/arcgis-rs"
keywords = ["arcgis", "gis", "rest-api", "geospatial"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
publish = true

[dependencies]
anyhow = "1.0.98"
config = "0.15.11"
dotenv = "0.15.0"
keyring = "3.6.2"
log = "0.4.27"
oauth2 = "4.4.1" # TODO: update to 5.0.0
once_cell = "1.21.3"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tiny_http = "0.12.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["v4"] }
