[package]
name = "arcgis-sharing-rs"
version = "0.1.0"
edition = "2021"
authors = ["Skyler Favors <skylerafavors@gmail.com>"]
description = "Rust client library for the ArcGIS REST API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/skyler-favors/arcgis-rs"
keywords = ["arcgis", "gis", "rest-api", "geospatial"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
publish = true

[package.metadata.docs.rs]
features = [
    "default-client"
]

[features]
default = [
    "default-client",
]
default-client = []

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.8.0"
async-trait = "0.1.89"
bytes = { version = "1.11.0", features = ["serde"] }
chrono = "0.4.42"
config = "0.15.11"
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.31"
http = "1.4.0"
keyring = "3.6.2"
log = "0.4.27"
oauth2 = "4.4.1" # TODO: update to 5.0.0
once_cell = "1.21.3"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
reqwest-middleware = "0.5.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.20"
serde_urlencoded = "0.7.1"
serial_test = "3.3.1"
snafu = { version = "0.8.9", features = ["backtrace"] }
thiserror = "2.0.17"
tiny_http = "0.12.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["v4"] }
